Fix align on walk image

--- a/themes/janeswalk/css/main.css
+++ b/themes/janeswalk/css/main.css
@@ -11068,6 +11068,22 @@ body.city-page > #blog:after {
     box-sizing: border-box;
   }
 }
+.walk-body .walk-about:before,
+.walk-body .walk-about:after {
+  content: " ";
+  display: table;
+}
+.walk-body .walk-about:after {
+  clear: both;
+}
+.walk-body .walk-about:before,
+.walk-body .walk-about:after {
+  content: " ";
+  display: table;
+}
+.walk-body .walk-about:after {
+  clear: both;
+}
 .walk-body .walk-team:before,
 .walk-body .walk-team:after {
   content: " ";
@@ -12000,7 +12016,7 @@ body[data-pageviewname=CreateWalkView] {
 #create-walk .nav > li > a,
 #create-walk .social-login-providers.template-fontawesome > li > a {
   -webkit-transition: background 0.2s ease-in-out;
-  transition: background 0.2s ease-in-out;
+          transition: background 0.2s ease-in-out;
   margin: 0;
   color: #999;
 }
